White Space Fixer

--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -1,60 +1,68 @@
 *
 {
     margin: 0%;
-    border: 0%;
-}
-body
-{
-    background-image: linear-gradient(#00fff2,#6aff00);
+    padding: 0%;
 }
 .Calc
 {
-    margin-top: 10%;
-    margin-left: 35%;
-    padding-bottom: 8%;
-    margin-bottom: 0ch;
+    position: fixed;
+    padding-top: 5%;
+    padding-left: 40%;
+    padding-right: 40%;
+    padding-bottom: 80%;
+    font-family: 'Roboto Slab', serif;
+    background-image: linear-gradient(green,blue);
 }
 .Calc .ResultArea
 {
     border: 1px solid black;
-    font-size: 300%;
+    height: 100px;
+    font-size: 80px;
+    padding: 1%;
     text-align: right;
-    width: 40.6%;
-    height: 80px;
-    color: white;
-    background-color: rgba(0,0,0,0.7);
+    background-color: rgba(0,0,0,0.5);
 }
 .Calc .ResultArea:hover
 {
-    background-color: rgba(0,0,0,0.9);
+    background-color: rgba(0,0,0,0.7);
 }
-.Calc .Row1
+.Row1
 {
     display: flex;
 }
-.Calc .Row1 .Numbers
+.Row1 .Numbers
 {
-    font-size: 400%;
+    font-size: 80px;
+    width: 70px;
     border: 1px solid black;
-    width: 10%;
     text-align: center;
-    color: white;
-    background-color: rgba(255, 81, 0, 0.7);
+    background-color: rgba(0, 153, 255, 0.5);
 }
-.Calc .Row1 .Numbers:hover
+.Row1 .Numbers:hover
 {
-    background-color: rgba(255, 81, 0, 0.9);
+    background-color: rgba(0, 153, 255, 0.7);
 }
-.Calc .Row1 .Symbols
+.Row1 .Symbols
 {
-    font-size: 400%;
+    font-size: 80px;
+    width: 70px;
     border: 1px solid black;
-    width: 10%;
     text-align: center;
-    color: white;
-    background-color: rgba(255, 0, 0, 0.7);
+    background-color: rgba(0, 255, 13, 0.5);
 }
-.Calc .Row1 .Symbols:hover
+.Row1 .Symbol
 {
-    background-color: rgba(255, 0, 0, 0.9);
+    font-size: 80px;
+    width: 70px;
+    border: 1px solid black;
+    text-align: center;
+    background-color:rgba(255, 0, 0, 0.5);
+}
+.Row1 .Symbol:hover
+{
+    background-color:rgba(255, 0, 0, 0.7);
+}
+.Row1 .Symbols:hover
+{
+    background-color: rgba(0, 255, 13, 0.7);
 }
